# singularity-desktop

./: .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  feedback.yml
.github/workflows/: libsingularity-ci.yml
data/: dev.sinty.desktop.gschema.xml  meson.build  singularity.portal
data/accountsservice/: com.singularity.Desktop.xml
data/systemd/: singularity-polkit-agent.service  xdg-desktop-portal-singularity.service
po/: POTFILES.in  meson.build  singularity-desktop.pot
scripts/: deploy-to-host.sh  install-greeter.sh  install-to-opt.sh
subprojects/singularity-loginui/: loginui.c  loginui.h  meson.build
